[gd_scene load_steps=2 format=3 uid="uid://cn5v270vtn1pl"]

[ext_resource type="Script" uid="uid://cilbj74x1typ6" path="res://scripts/game_over_screen.gd" id="1_iwahs"]

[node name="GameOverScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_iwahs")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -99.0
offset_right = 92.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="GameOverLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Quit"
